Proyecto1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    ARRAY
    AS
    BREAK
    CASE
    CLASS
    COMA
    COMENTARIO_LARGO
    COMENTARIO_UNA_LINEA
    COMPARE
    CONST
    CONTINUE
    CORCHDER
    CORCHIZQ
    COUNT
    CURRENT
    DEFAULT
    DOSPUNTOS
    ELSE
    END_SWITCH
    END_WHILE
    EXTENDS
    FALSE
    FIN
    FLOAT
    FOR
    FUNCTION
    GLOBAL
    INICIO
    INTEGER
    NEW
    NULL
    OPERACIONSUM
    OPERALOGICO_MAP
    OPERAMAPA
    OPERAPUT
    OPERCOMPARACION
    PRIVATE
    PROTECTED
    PUBLIC
    PUNTO
    RETURN
    RSORT
    STATIC
    STRING
    SWITCH
    TEXTOSENCILLO
    TRUE

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> valor
Rule 2     sentencias -> operacion
Rule 3     sentencias -> asignacion
Rule 4     sentencias -> asignacion_abreviatura_op
Rule 5     sentencias -> print
Rule 6     sentencias -> impresionEcho
Rule 7     sentencias -> operacion_logica
Rule 8     sentencias -> condIf
Rule 9     sentencias -> bucleDoWhile
Rule 10    sentencias -> rellenoArray
Rule 11    valor -> valorNumerico
Rule 12    valor -> CADENA
Rule 13    varphp -> VARIABLE_PHP
Rule 14    valorNumerico -> ENTERO
Rule 15    valorNumerico -> FLOTANTE
Rule 16    valorNumerico -> varphp
Rule 17    valorNumerico -> BOOLEANO
Rule 18    operacion -> valorNumerico PUNTOYCOMA
Rule 19    operacion -> valorNumerico operador operacion
Rule 20    operacion -> valorNumerico comparacion operacion
Rule 21    operacion_logica -> varphp opLogicos varphp
Rule 22    operador -> MAS
Rule 23    operador -> MENOS
Rule 24    operador -> MULTIPLICA
Rule 25    operador -> DIVIDE
Rule 26    operador -> MODULO
Rule 27    operador -> EXPONENCIACION
Rule 28    comparacion -> MAYORQUE
Rule 29    comparacion -> MENORQUE
Rule 30    comparacion -> MENORQUE OPERASIGNACION
Rule 31    comparacion -> MAYORQUE OPERASIGNACION
Rule 32    comparacion -> MENORQUE OPERASIGNACION MAYORQUE
Rule 33    comparacion -> MENORQUE MAYORQUE
Rule 34    opLogicos -> OPERLOGICO_AND
Rule 35    opLogicos -> OPERLOGICO_OR
Rule 36    opLogicos -> OPERLOGICO_XOR
Rule 37    opLogicos -> OPERLOGICO_NOT
Rule 38    opLogicos -> OPERLOGICO_OREXCLUSIVO
Rule 39    asignacion -> VARIABLE_PHP OPERASIGNACION valor PUNTOYCOMA
Rule 40    asignacion_abreviado -> MASIGUAL
Rule 41    asignacion_abreviado -> MENOSIGUAL
Rule 42    asignacion_abreviado -> ASTERISCOIGUAL
Rule 43    asignacion_abreviado -> BARRAIGUAL
Rule 44    asignacion_abreviado -> PORCENTAJEIGUAL
Rule 45    asignacion_abreviado -> DOBLEASTERISCOIGUAL
Rule 46    asignacion_abreviatura_op -> VARIABLE_PHP asignacion_abreviado valorNumerico PUNTOYCOMA
Rule 47    print -> PRINT PARENIZQ PARENDER PUNTOYCOMA
Rule 48    print -> PRINT PARENIZQ COMDOB COMDOB PARENDER PUNTOYCOMA
Rule 49    print -> PRINT PARENIZQ CADENA PARENDER PUNTOYCOMA
Rule 50    impresionEcho -> ECHO CADENA PUNTOYCOMA
Rule 51    condIf -> IF PARENIZQ BOOLEAN PARENDER PUNTOYCOMA
Rule 52    condIf -> IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ operacion LLAVEDER
Rule 53    condIf -> IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ print LLAVEDER
Rule 54    condIf -> IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ impresionEcho LLAVEDER
Rule 55    bucleDoWhile -> DO LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
Rule 56    bucleDoWhile -> DO LLAVEIZQ print LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
Rule 57    bucleDoWhile -> DO LLAVEIZQ impresionEcho LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
Rule 58    bucleDoWhile -> DO LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor
Rule 59    rellenoArray -> valor OPERASIG_ARRAY valor PUNTOYCOMA
Rule 60    nombreFuncion -> NOMBRE PARENIZQ PARENDER

Terminals, with rules where they appear

AMPERSAND            : 
ARRAY                : 
AS                   : 
ASTERISCOIGUAL       : 42
BARRAIGUAL           : 43
BOOLEAN              : 51 52 53 54
BOOLEANO             : 17
BREAK                : 
CADENA               : 12 49 50
CASE                 : 
CLASS                : 
COMA                 : 
COMDOB               : 48 48
COMENTARIO_LARGO     : 
COMENTARIO_UNA_LINEA : 
COMPARE              : 
CONST                : 
CONTINUE             : 
CORCHDER             : 
CORCHIZQ             : 
COUNT                : 
CURRENT              : 
DEFAULT              : 
DIVIDE               : 25
DO                   : 55 56 57 58
DOBLEASTERISCOIGUAL  : 45
DOSPUNTOS            : 
ECHO                 : 50
ELSE                 : 
END_SWITCH           : 
END_WHILE            : 
ENTERO               : 14
EXPONENCIACION       : 27
EXTENDS              : 
FALSE                : 
FIN                  : 
FLOAT                : 
FLOTANTE             : 15
FOR                  : 
FUNCTION             : 
GLOBAL               : 
IF                   : 51 52 53 54
INICIO               : 
INTEGER              : 
LLAVEDER             : 52 53 54 55 56 57 58
LLAVEIZQ             : 52 53 54 55 56 57 58
MAS                  : 22
MASIGUAL             : 40
MAYORQUE             : 28 31 32 33
MENORQUE             : 29 30 32 33
MENOS                : 23
MENOSIGUAL           : 41
MODULO               : 26
MULTIPLICA           : 24
NEW                  : 
NOMBRE               : 60
NULL                 : 
OPERACIONSUM         : 
OPERALOGICO_MAP      : 
OPERAMAPA            : 
OPERAPUT             : 
OPERASIGNACION       : 30 31 32 39
OPERASIG_ARRAY       : 59
OPERCOMPARACION      : 
OPERLOGICO_AND       : 34
OPERLOGICO_NOT       : 37
OPERLOGICO_OR        : 35
OPERLOGICO_OREXCLUSIVO : 38
OPERLOGICO_XOR       : 36
PARENDER             : 47 48 49 51 52 53 54 55 56 57 60
PARENIZQ             : 47 48 49 51 52 53 54 55 56 57 58 60
PORCENTAJEIGUAL      : 44
PRINT                : 47 48 49
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 
PUNTOYCOMA           : 18 39 46 47 48 49 50 51 55 56 57 59
RETURN               : 
RSORT                : 
STATIC               : 
STRING               : 
SWITCH               : 
TEXTOSENCILLO        : 
TRUE                 : 
VARIABLE_PHP         : 13 39 46
WHILE                : 55 56 57 58
error                : 

Nonterminals, with rules where they appear

asignacion           : 3
asignacion_abreviado : 46
asignacion_abreviatura_op : 4
bucleDoWhile         : 9
comparacion          : 20
condIf               : 8
impresionEcho        : 6 54 57
nombreFuncion        : 
opLogicos            : 21
operacion            : 2 19 20 52 55 58
operacion_logica     : 7
operador             : 19
print                : 5 53 56
rellenoArray         : 10
sentencias           : 0
valor                : 1 39 55 56 57 58 59 59
valorNumerico        : 11 18 19 20 46
varphp               : 16 21 21

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . valor
    (2) sentencias -> . operacion
    (3) sentencias -> . asignacion
    (4) sentencias -> . asignacion_abreviatura_op
    (5) sentencias -> . print
    (6) sentencias -> . impresionEcho
    (7) sentencias -> . operacion_logica
    (8) sentencias -> . condIf
    (9) sentencias -> . bucleDoWhile
    (10) sentencias -> . rellenoArray
    (11) valor -> . valorNumerico
    (12) valor -> . CADENA
    (18) operacion -> . valorNumerico PUNTOYCOMA
    (19) operacion -> . valorNumerico operador operacion
    (20) operacion -> . valorNumerico comparacion operacion
    (39) asignacion -> . VARIABLE_PHP OPERASIGNACION valor PUNTOYCOMA
    (46) asignacion_abreviatura_op -> . VARIABLE_PHP asignacion_abreviado valorNumerico PUNTOYCOMA
    (47) print -> . PRINT PARENIZQ PARENDER PUNTOYCOMA
    (48) print -> . PRINT PARENIZQ COMDOB COMDOB PARENDER PUNTOYCOMA
    (49) print -> . PRINT PARENIZQ CADENA PARENDER PUNTOYCOMA
    (50) impresionEcho -> . ECHO CADENA PUNTOYCOMA
    (21) operacion_logica -> . varphp opLogicos varphp
    (51) condIf -> . IF PARENIZQ BOOLEAN PARENDER PUNTOYCOMA
    (52) condIf -> . IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ operacion LLAVEDER
    (53) condIf -> . IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ print LLAVEDER
    (54) condIf -> . IF PARENIZQ BOOLEAN PARENDER LLAVEIZQ impresionEcho LLAVEDER
    (55) bucleDoWhile -> . DO LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (56) bucleDoWhile -> . DO LLAVEIZQ print LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (57) bucleDoWhile -> . DO LLAVEIZQ impresionEcho LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (58) bucleDoWhile -> . DO LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor
    (59) rellenoArray -> . valor OPERASIG_ARRAY valor PUNTOYCOMA
    (14) valorNumerico -> . ENTERO
    (15) valorNumerico -> . FLOTANTE
    (16) valorNumerico -> . varphp
    (17) valorNumerico -> . BOOLEANO
    (13) varphp -> . VARIABLE_PHP

    CADENA          shift and go to state 13
    VARIABLE_PHP    shift and go to state 14
    PRINT           shift and go to state 15
    ECHO            shift and go to state 16
    IF              shift and go to state 18
    DO              shift and go to state 19
    ENTERO          shift and go to state 20
    FLOTANTE        shift and go to state 21
    BOOLEANO        shift and go to state 22

    sentencias                     shift and go to state 1
    valor                          shift and go to state 2
    operacion                      shift and go to state 3
    asignacion                     shift and go to state 4
    asignacion_abreviatura_op      shift and go to state 5
    print                          shift and go to state 6
    impresionEcho                  shift and go to state 7
    operacion_logica               shift and go to state 8
    condIf                         shift and go to state 9
    bucleDoWhile                   shift and go to state 10
    rellenoArray                   shift and go to state 11
    valorNumerico                  shift and go to state 12
    varphp                         shift and go to state 17

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> valor .
    (59) rellenoArray -> valor . OPERASIG_ARRAY valor PUNTOYCOMA

    $end            reduce using rule 1 (sentencias -> valor .)
    OPERASIG_ARRAY  shift and go to state 23


state 3

    (2) sentencias -> operacion .

    $end            reduce using rule 2 (sentencias -> operacion .)


state 4

    (3) sentencias -> asignacion .

    $end            reduce using rule 3 (sentencias -> asignacion .)


state 5

    (4) sentencias -> asignacion_abreviatura_op .

    $end            reduce using rule 4 (sentencias -> asignacion_abreviatura_op .)


state 6

    (5) sentencias -> print .

    $end            reduce using rule 5 (sentencias -> print .)


state 7

    (6) sentencias -> impresionEcho .

    $end            reduce using rule 6 (sentencias -> impresionEcho .)


state 8

    (7) sentencias -> operacion_logica .

    $end            reduce using rule 7 (sentencias -> operacion_logica .)


state 9

    (8) sentencias -> condIf .

    $end            reduce using rule 8 (sentencias -> condIf .)


state 10

    (9) sentencias -> bucleDoWhile .

    $end            reduce using rule 9 (sentencias -> bucleDoWhile .)


state 11

    (10) sentencias -> rellenoArray .

    $end            reduce using rule 10 (sentencias -> rellenoArray .)


state 12

    (11) valor -> valorNumerico .
    (18) operacion -> valorNumerico . PUNTOYCOMA
    (19) operacion -> valorNumerico . operador operacion
    (20) operacion -> valorNumerico . comparacion operacion
    (22) operador -> . MAS
    (23) operador -> . MENOS
    (24) operador -> . MULTIPLICA
    (25) operador -> . DIVIDE
    (26) operador -> . MODULO
    (27) operador -> . EXPONENCIACION
    (28) comparacion -> . MAYORQUE
    (29) comparacion -> . MENORQUE
    (30) comparacion -> . MENORQUE OPERASIGNACION
    (31) comparacion -> . MAYORQUE OPERASIGNACION
    (32) comparacion -> . MENORQUE OPERASIGNACION MAYORQUE
    (33) comparacion -> . MENORQUE MAYORQUE

    OPERASIG_ARRAY  reduce using rule 11 (valor -> valorNumerico .)
    $end            reduce using rule 11 (valor -> valorNumerico .)
    PUNTOYCOMA      shift and go to state 24
    MAS             shift and go to state 27
    MENOS           shift and go to state 28
    MULTIPLICA      shift and go to state 29
    DIVIDE          shift and go to state 30
    MODULO          shift and go to state 31
    EXPONENCIACION  shift and go to state 32
    MAYORQUE        shift and go to state 33
    MENORQUE        shift and go to state 34

    operador                       shift and go to state 25
    comparacion                    shift and go to state 26

state 13

    (12) valor -> CADENA .

    OPERASIG_ARRAY  reduce using rule 12 (valor -> CADENA .)
    $end            reduce using rule 12 (valor -> CADENA .)
    PUNTOYCOMA      reduce using rule 12 (valor -> CADENA .)
    PARENDER        reduce using rule 12 (valor -> CADENA .)


state 14

    (39) asignacion -> VARIABLE_PHP . OPERASIGNACION valor PUNTOYCOMA
    (46) asignacion_abreviatura_op -> VARIABLE_PHP . asignacion_abreviado valorNumerico PUNTOYCOMA
    (13) varphp -> VARIABLE_PHP .
    (40) asignacion_abreviado -> . MASIGUAL
    (41) asignacion_abreviado -> . MENOSIGUAL
    (42) asignacion_abreviado -> . ASTERISCOIGUAL
    (43) asignacion_abreviado -> . BARRAIGUAL
    (44) asignacion_abreviado -> . PORCENTAJEIGUAL
    (45) asignacion_abreviado -> . DOBLEASTERISCOIGUAL

    OPERASIGNACION  shift and go to state 35
    OPERLOGICO_AND  reduce using rule 13 (varphp -> VARIABLE_PHP .)
    OPERLOGICO_OR   reduce using rule 13 (varphp -> VARIABLE_PHP .)
    OPERLOGICO_XOR  reduce using rule 13 (varphp -> VARIABLE_PHP .)
    OPERLOGICO_NOT  reduce using rule 13 (varphp -> VARIABLE_PHP .)
    OPERLOGICO_OREXCLUSIVO reduce using rule 13 (varphp -> VARIABLE_PHP .)
    PUNTOYCOMA      reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MAS             reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MENOS           reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MULTIPLICA      reduce using rule 13 (varphp -> VARIABLE_PHP .)
    DIVIDE          reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MODULO          reduce using rule 13 (varphp -> VARIABLE_PHP .)
    EXPONENCIACION  reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MAYORQUE        reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MENORQUE        reduce using rule 13 (varphp -> VARIABLE_PHP .)
    OPERASIG_ARRAY  reduce using rule 13 (varphp -> VARIABLE_PHP .)
    $end            reduce using rule 13 (varphp -> VARIABLE_PHP .)
    MASIGUAL        shift and go to state 37
    MENOSIGUAL      shift and go to state 38
    ASTERISCOIGUAL  shift and go to state 39
    BARRAIGUAL      shift and go to state 40
    PORCENTAJEIGUAL shift and go to state 41
    DOBLEASTERISCOIGUAL shift and go to state 42

    asignacion_abreviado           shift and go to state 36

state 15

    (47) print -> PRINT . PARENIZQ PARENDER PUNTOYCOMA
    (48) print -> PRINT . PARENIZQ COMDOB COMDOB PARENDER PUNTOYCOMA
    (49) print -> PRINT . PARENIZQ CADENA PARENDER PUNTOYCOMA

    PARENIZQ        shift and go to state 43


state 16

    (50) impresionEcho -> ECHO . CADENA PUNTOYCOMA

    CADENA          shift and go to state 44


state 17

    (21) operacion_logica -> varphp . opLogicos varphp
    (16) valorNumerico -> varphp .
    (34) opLogicos -> . OPERLOGICO_AND
    (35) opLogicos -> . OPERLOGICO_OR
    (36) opLogicos -> . OPERLOGICO_XOR
    (37) opLogicos -> . OPERLOGICO_NOT
    (38) opLogicos -> . OPERLOGICO_OREXCLUSIVO

    PUNTOYCOMA      reduce using rule 16 (valorNumerico -> varphp .)
    MAS             reduce using rule 16 (valorNumerico -> varphp .)
    MENOS           reduce using rule 16 (valorNumerico -> varphp .)
    MULTIPLICA      reduce using rule 16 (valorNumerico -> varphp .)
    DIVIDE          reduce using rule 16 (valorNumerico -> varphp .)
    MODULO          reduce using rule 16 (valorNumerico -> varphp .)
    EXPONENCIACION  reduce using rule 16 (valorNumerico -> varphp .)
    MAYORQUE        reduce using rule 16 (valorNumerico -> varphp .)
    MENORQUE        reduce using rule 16 (valorNumerico -> varphp .)
    OPERASIG_ARRAY  reduce using rule 16 (valorNumerico -> varphp .)
    $end            reduce using rule 16 (valorNumerico -> varphp .)
    OPERLOGICO_AND  shift and go to state 46
    OPERLOGICO_OR   shift and go to state 47
    OPERLOGICO_XOR  shift and go to state 48
    OPERLOGICO_NOT  shift and go to state 49
    OPERLOGICO_OREXCLUSIVO shift and go to state 50

    opLogicos                      shift and go to state 45

state 18

    (51) condIf -> IF . PARENIZQ BOOLEAN PARENDER PUNTOYCOMA
    (52) condIf -> IF . PARENIZQ BOOLEAN PARENDER LLAVEIZQ operacion LLAVEDER
    (53) condIf -> IF . PARENIZQ BOOLEAN PARENDER LLAVEIZQ print LLAVEDER
    (54) condIf -> IF . PARENIZQ BOOLEAN PARENDER LLAVEIZQ impresionEcho LLAVEDER

    PARENIZQ        shift and go to state 51


state 19

    (55) bucleDoWhile -> DO . LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (56) bucleDoWhile -> DO . LLAVEIZQ print LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (57) bucleDoWhile -> DO . LLAVEIZQ impresionEcho LLAVEDER WHILE PARENIZQ valor PARENDER PUNTOYCOMA
    (58) bucleDoWhile -> DO . LLAVEIZQ operacion LLAVEDER WHILE PARENIZQ valor

    LLAVEIZQ        shift and go to state 52


state 20

    (14) valorNumerico -> ENTERO .

    PUNTOYCOMA      reduce using rule 14 (valorNumerico -> ENTERO .)
    MAS             reduce using rule 14 (valorNumerico -> ENTERO .)
    MENOS           reduce using rule 14 (valorNumerico -> ENTERO .)
    MULTIPLICA      reduce using rule 14 (valorNumerico -> ENTERO .)
    DIVIDE          reduce using rule 14 (valorNumerico -> ENTERO .)
    MODULO          reduce using rule 14 (valorNumerico -> ENTERO .)
    EXPONENCIACION  reduce using rule 14 (valorNumerico -> ENTERO .)
    MAYORQUE        reduce using rule 14 (valorNumerico -> ENTERO .)
    MENORQUE        reduce using rule 14 (valorNumerico -> ENTERO .)
    OPERASIG_ARRAY  reduce using rule 14 (valorNumerico -> ENTERO .)
    $end            reduce using rule 14 (valorNumerico -> ENTERO .)
    PARENDER        reduce using rule 14 (valorNumerico -> ENTERO .)


state 21

    (15) valorNumerico -> FLOTANTE .

    PUNTOYCOMA      reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MAS             reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MENOS           reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MULTIPLICA      reduce using rule 15 (valorNumerico -> FLOTANTE .)
    DIVIDE          reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MODULO          reduce using rule 15 (valorNumerico -> FLOTANTE .)
    EXPONENCIACION  reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MAYORQUE        reduce using rule 15 (valorNumerico -> FLOTANTE .)
    MENORQUE        reduce using rule 15 (valorNumerico -> FLOTANTE .)
    OPERASIG_ARRAY  reduce using rule 15 (valorNumerico -> FLOTANTE .)
    $end            reduce using rule 15 (valorNumerico -> FLOTANTE .)
    PARENDER        reduce using rule 15 (valorNumerico -> FLOTANTE .)


state 22

    (17) valorNumerico -> BOOLEANO .

    PUNTOYCOMA      reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MAS             reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MENOS           reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MULTIPLICA      reduce using rule 17 (valorNumerico -> BOOLEANO .)
    DIVIDE          reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MODULO          reduce using rule 17 (valorNumerico -> BOOLEANO .)
    EXPONENCIACION  reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MAYORQUE        reduce using rule 17 (valorNumerico -> BOOLEANO .)
    MENORQUE        reduce using rule 17 (valorNumerico -> BOOLEANO .)
    OPERASIG_ARRAY  reduce using rule 17 (valorNumerico -> BOOLEANO .)
    $end            reduce using rule 17 (valorNumerico -> BOOLEANO .)
    PARENDER        reduce using rule 17 (valorNumerico -> BOOLEANO .)


state 23

    (59) rellenoArray -> valor OPERASIG_ARRAY . valor PUNTOYCOMA
    (11) valor -> . valorNumerico
    (12) valor -> . CADENA
    (14) valorNumerico -> . ENTERO
    (15) valorNumerico -> . FLOTANTE
    (16) valorNumerico -> . varphp
    (17) valorNumerico -> . BOOLEANO
    (13) varphp -> . VARIABLE_PHP

    CADENA          shift and go to state 13
    ENTERO          shift and go to state 20
    FLOTANTE        shift and go to state 21
    BOOLEANO        shift and go to state 22
    VARIABLE_PHP    shift and go to state 56

    valor                          shift and go to state 53
    valorNumerico                  shift and go to state 54
    varphp                         shift and go to state 55

state 24

    (18) operacion -> valorNumerico PUNTOYCOMA .

    $end            reduce using rule 18 (operacion -> valorNumerico PUNTOYCOMA .)
    LLAVEDER        reduce using rule 18 (operacion -> valorNumerico PUNTOYCOMA .)


state 25

    (19) operacion -> valorNumerico operador . operacion
    (18) operacion -> . valorNumerico PUNTOYCOMA
    (19) operacion -> . valorNumerico operador operacion
    (20) operacion -> . valorNumerico comparacion operacion
    (14) valorNumerico -> . ENTERO
    (15) valorNumerico -> . FLOTANTE
    (16) valorNumerico -> . varphp
    (17) valorNumerico -> . BOOLEANO
    (13) varphp -> . VARIABLE_PHP

    ENTERO          shift and go to state 20
    FLOTANTE        shift and go to state 21
    BOOLEANO        shift and go to state 22
    VARIABLE_PHP    shift and go to state 56

    valorNumerico                  shift and go to state 57
    operacion                      shift and go to state 58
    varphp                         shift and go to state 55

state 26

    (20) operacion -> valorNumerico comparacion . operacion
    (18) operacion -> . valorNumerico PUNTOYCOMA
    (19) operacion -> . valorNumerico operador operacion
    (20) operacion -> . valorNumerico comparacion operacion
    (14) valorNumerico -> . ENTERO
    (15) valorNumerico -> . FLOTANTE
    (16) valorNumerico -> . varphp
    (17) valorNumerico -> . BOOLEANO
    (13) varphp -> . VARIABLE_PHP

    ENTERO          shift and go to state 20
    FLOTANTE        shift and go to state 21
    BOOLEANO        shift and go to state 22
    VARIABLE_PHP    shift and go to state 56

    valorNumerico                  shift and go to state 57
    operacion                      shift and go to state 59
    varphp                         shift and go to state 55

state 27

    (22) operador -> MAS .

    ENTERO          reduce using rule 22 (operador -> MAS .)
    FLOTANTE        reduce using rule 22 (operador -> MAS .)
    BOOLEANO        reduce using rule 22 (operador -> MAS .)
    VARIABLE_PHP    reduce using rule 22 (operador -> MAS .)


state 28

    (23) operador -> MENOS .

    ENTERO          reduce using rule 23 (operador -> MENOS .)
    FLOTANTE        reduce using rule 23 (operador -> MENOS .)
    BOOLEANO        reduce using rule 23 (operador -> MENOS .)
    VARIABLE_PHP    reduce using rule 23 (operador -> MENOS .)


state 29

    (24) operador -> MULTIPLICA .

    ENTERO          reduce using rule 24 (operador -> MULTIPLICA .)
    FLOTANTE        reduce using rule 24 (operador -> MULTIPLICA .)
    BOOLEANO        reduce using rule 24 (operador -> MULTIPLICA .)
    VARIABLE_PHP    reduce using rule 24 (operador -> MULTIPLICA .)


state 30

    (25) operador -> DIVIDE .

    ENTERO          reduce using rule 25 (operador -> DIVIDE .)
    FLOTANTE        reduce using rule 25 (operador -> DIVIDE .)
    BOOLEANO        reduce using rule 25 (operador -> DIVIDE .)
    VARIABLE_PHP    reduce using rule 25 (operador -> DIVIDE .)


state 31

    (26) operador -> MODULO .
